--- a/2021_22/INT/homework-01/homework.tex
+++ b/2021_22/INT/homework-01/homework.tex
@@ -59,5 +59,43 @@
    \end{proof}
 \end{claim*}
 
+\begin{claim*}[2]
+   $\phi(2025)=1593$
+   \begin{proof}
+      We note $2025 = 3^4 5^2$..
+      By multiplicativity of $\phi$ and \emph{Boocher's Notes, Corollary 11.11}
+      we obtain
+      \begin{align*}
+         \phi(2025) = \phi(3^4)\phi(5^2) = (81-27)(25-5) = 1593.
+      \end{align*}
+   \end{proof}
+\end{claim*}
+
+\renewcommand{\hs}{\hspace{0.2cm}}
+\begin{claim*}[3]
+   Let $p=5$ and $q=7$. Then the number of primitive roots modulo $p$ and $q$ are equal.
+   \begin{proof}
+      Consider $p=5$. We check the candidates $1,...,p-1=4$:
+      \begin{align*}
+         1^1 \equiv 1,\hs \underline{1^2 \equiv 1},\hs 1^3 \equiv 1,\hs 1^4 \equiv 1 \mod p \\
+         2^1 \equiv 2,\hs 2^2 \equiv 4,            \hs 2^3 \equiv 3,\hs 2^4 \equiv 1 \mod p             \\
+         3^1 \equiv 3,\hs 3^2 \equiv 4,            \hs 3^3 \equiv 2,\hs 3^4 \equiv 1 \mod p             \\
+         4^1 \equiv 4,\hs \underline{4^2 \equiv 1},\hs 4^3 \equiv 4,\hs 2^4 \equiv 1 \mod p
+      \end{align*}
+      Thus the set of primitive roots modulo $5$ is $S=\{2,3\}$.
+
+      Now consider $q=7$. We check the candidates $1,...,p-1=6$:
+      \begin{align*}
+         1^1 \equiv 1,\hs \underline{1^2 \equiv 1},\hs 1^3 \equiv 1,             \hs 1^4 \equiv 1,\hs 1^5 \equiv 1,\hs 1^6 \equiv 1 \mod q \\
+         2^1 \equiv 2,\hs 2^2 \equiv 4,            \hs \underline{2^3 \equiv 1}, \hs 2^4 \equiv 2,\hs 2^5 \equiv 4,\hs 2^6 \equiv 1 \mod q \\
+         3^1 \equiv 3,\hs 3^2 \equiv 2,            \hs 3^3 \equiv 6,             \hs 3^4 \equiv 4,\hs 3^5 \equiv 5,\hs 3^6 \equiv 1 \mod q             \\
+         4^1 \equiv 4,\hs 4^2 \equiv 2,            \hs \underline{4^3 \equiv 1}, \hs 4^4 \equiv 4,\hs 4^5 \equiv 2,\hs 4^6 \equiv 1 \mod q \\
+         5^1 \equiv 5,\hs 5^2 \equiv 4,            \hs 5^3 \equiv 6,             \hs 5^4 \equiv 2,\hs 5^5 \equiv 3,\hs 5^6 \equiv 1 \mod q             \\
+         6^1 \equiv 6,\hs \underline{6^2 \equiv 1},\hs 6^3 \equiv 6,             \hs 6^4 \equiv 1,\hs 6^5 \equiv 6,\hs 3^6 \equiv 1 \mod q
+      \end{align*}
+      Thus the set of primitive roots modulo $7$ is $T=\{3, 5\}$.
+      Note $\abs S = \abs T = 2$ as claimed.
+   \end{proof}
+\end{claim*}
 
 \end{document}
