--- a/2021_22/MS/notes/notes.tex
+++ b/2021_22/MS/notes/notes.tex
@@ -19,7 +19,7 @@
     A \emph{metric} on a non-empty set $X$ is a function $d:X\times X\to\R$
     such that, for all $x,y,z\in X$,
     \begin{enumerate}
-        \item $d(x,y)=0$ if and only if $x=y$,
+        \item $d(x,y)=0$ iff $x=y$,
         \item $d(x,y)=d(y,x)$,
         \item $d(x,y)\leq d(x,z) + d(z,y)$.
     \end{enumerate}
@@ -81,7 +81,7 @@
     where for all $x,y\in X$ and all $\lambda\in\R$,
     \begin{enumerate}
         \item $\vabs x \geq 0$,
-        \item $\vabs x = 0$ if and only if $x = 0$,
+        \item $\vabs x = 0$ iff $x = 0$,
         \item $\vabs{\lambda x}=\abs \lambda \vabs x$,
         \item $\vabs{x+y}\leq \vabs x +\vabs y$.
     \end{enumerate}
@@ -152,7 +152,7 @@
     is a map $\lra{.,.}:X\times X\to\R$ where for all $x,y,z\in X$ and
     $\lambda,\mu\in\R$,
     \begin{enumerate}
-        \item $\lra{x,x}\geq 0$ with $\lra{x,x}=0$ if and only if $x=0$,
+        \item $\lra{x,x}\geq 0$ with $\lra{x,x}=0$ iff $x=0$,
         \item $\lra{x,y}=\lra{y,x}$,
         \item $\lra{\lambda x+\mu y,z}=\lambda\lra{x,z}+\mu{y,z}$.
     \end{enumerate}
@@ -214,7 +214,7 @@
 \end{proposition}
 
 \begin{theorem}[Notes 2.10]
-    A subset of the real line is open if and only if it is the union of open intervals.
+    A subset of the real line is open iff it is the union of open intervals.
 \end{theorem}
 
 \begin{theorem}[Notes 2.11]
@@ -230,7 +230,7 @@
 \end{proposition}
 
 \begin{proposition}[Notes 2.24]
-    A function $f:\R\to\R$ is continuous if and only if the inverse image of every
+    A function $f:\R\to\R$ is continuous iff the inverse image of every
     open set is an open set.
 \end{proposition}
 
@@ -240,7 +240,7 @@
 \end{definition}
 
 \begin{theorem}
-    Let $A\subseteq\R$. A function $f:A\to\R$ is continuous if and only if the inverse
+    Let $A\subseteq\R$. A function $f:A\to\R$ is continuous iff the inverse
     image $\inv f(G)$ of every open set $G$ is a relatively open subset of $A$.
 \end{theorem}
 
@@ -306,6 +306,156 @@
 \begin{proposition}[Notes 3.7]
     Let $(X,d)$ be a metric space, $c\in X$ and $r>0$. For every point $x$ in the open
     ball $B(c,r)$ there exists a positive number $r'$ such that $B(x,r')\subseteq B(c,r)$.
+\end{proposition}
+
+\section{Open sets and closed sets}
+
+Let $(X,d)$ be a metric space.
+
+\subsection{Open sets}
+
+\begin{definition}
+    Let $A\subseteq X$. A point $a$ in $A$ is
+    an \emph{interior point of $A$} if there exists $r>0$ such that $B(a,r)\subseteq A$.
+\end{definition}
+
+\begin{definition}
+    Let $G\subseteq X$. Then $G$ is \emph{open} if 
+    every point in $G$ is an interior point of $G$, i.e. for every $x\in G$ there exists 
+    $r>0$ such that $B(x,r)\subseteq G$.
+\end{definition}
+
+\begin{theorem}[Notes 4.6]
+    Let $(G_i)_{i\in I}$ be any family of open subsets of $X$. Then the union 
+    $\bigcup_{i\in I} G_i$ is open.
+\end{theorem}
+
+\begin{theorem}[Notes 4.7]
+    Let $G_1,...,G_n\subset X$ be open. Then the intersection $G_1\cap\cdots\cap G_n$
+    is open. 
+\end{theorem}
+
+\begin{proposition}[Notes 4.9]
+    A set in a metric space is open iff it can be written as a union of open balls. 
+\end{proposition}
+
+\begin{definition}
+    Let $(Y,d_Y)$ be a subspace of $(X,d)$ and let $G\subseteq Y$. Then $G$ is called
+    \emph{relatively open} if it is open in the metric space $(Y,d_Y)$.
+\end{definition}
+
+\begin{proposition}[Notes 4.10]
+    Let $(Y,d_Y)$ be a subspace of $(X,d)$ and let $G\subseteq Y$. The following 
+    are equivalent
+    \begin{itemize}
+        \item $G$ is open in the metric space $(Y,d_Y)$;
+        \item there exists $O\subseteq X$ that is open in the metric space $(X,d)$ such that $G=O\cap Y$.
+    \end{itemize} 
+\end{proposition}
+
+\begin{proposition}[Notes, Exercise 4.11]
+    Let $(Y,d_Y)$ be a subspace of $(X,d)$ such that $Y$ is open and non-empty. Then a 
+    subset $G\subseteq Y$ is open in the metric space $(Y,d_Y)$ iff it is open in the 
+    metric space $(X,d)$.
+\end{proposition}
+
+\begin{definition}
+    A metric space $(X,d)$ is said to be \emph{discrete} if every subset of $X$ is open. 
+\end{definition}
+
+\subsection{Closed sets}
+
+\begin{definition}
+    Let $F\subseteq X$. Then $F$ is \emph{closed} if $F^C$ is open.
+\end{definition}
+
+\begin{theorem}[Notes 4.20]
+    Let $(F_i)_{i\in I}$ be a family of closed subsets of $X$. Then $\bigcap_{i\in I}F_i$
+    is closed. 
+\end{theorem}
+
+\begin{theorem}[Notes 4.21]
+    Let $F_1,...,F_n\subseteq X$ be closed. Then $F_1\cup\cdots\cup F_n$ is closed. 
+\end{theorem}
+
+\begin{definition}
+    Let $(Y,d_Y)$ be a subspace of $(X,d)$ and let $F\subseteq Y$. Then $F$ is called 
+    \emph{relatively closed} if it is closed in the metric space $(Y,d_Y)$.
+\end{definition}
+
+\begin{proposition}
+    Let $(Y,d_Y)$ be a subspace of $(X,d)$ and let $F\subseteq Y$. The following are 
+    equivalent
+    \begin{itemize}
+        \item $F$ is closed in the metric space $(Y,d_Y)$;
+        \item there exists $C\subset X$ that is closed in the metric space $(X,d)$ such that 
+            $F=C\cap Y$.
+    \end{itemize}
+\end{proposition}
+
+\begin{definition}
+    A set $A\subseteq X$ is called \emph{clopen} if it is both closed and open 
+    in the metric space $(X,d)$.
+\end{definition}
+
+\subsection{Interior of a set}
+
+\subsection{Exterior and bondary of a set}
+
+\subsection{Closure of a set}
+
+\begin{definition}
+    Let $A\subseteq X$. The smallest closed set containing $A$, denoted $\overline A$, is called
+    the \emph{closure} of $A$.
+\end{definition}
+
+\begin{proposition}[Notes 4.26]
+    Let $A,B\subseteq X$. Then
+    \begin{itemize}
+        \item $\overline\emptyset = \emptyset$ and $\overline X = X$,
+        \item $\overline{\overline A} = \overline A$,
+        \item $A$ is closed iff $A=\overline A$,
+        \item $A\subseteq B$ implies $\overline A\subseteq\overline B$,
+        \item $\overline{A\cup B} = \overline A \cup \overline B$.
+    \end{itemize} 
+\end{proposition}
+
+\subsection{Adherent points}
+
+\begin{definition}[Notes 4.27]
+    Let $A\subseteq X$ and $x\in X$. We say that $x$ is an \emph{adherent point of $A$}
+    iff, for every $r>0$, we have $B(x,r)\cap A\not=\emptyset$. 
+\end{definition}
+
+\begin{proposition}[Notes 4.29]
+    Let $A\subseteq X$. A point $x\in X$ is an adherent point of $A$ iff 
+    $x\in\overline A$. 
+\end{proposition}
+
+\begin{definition}
+    Let $A\subset X$ and $x\in X$.
+    \begin{enumerate}
+        \item We say that $x$ is an \emph{accumulation point} of $A$ if, for every $r>0$,
+            \begin{align*}
+                B(x,r)\cap A\not=\{x\}.
+            \end{align*}
+        \item We say that $x$ is an \emph{isolated point} of $A$ if there exists $r_0>0$
+            such that \begin{align*}
+                B(x,r_0)\cap A = \{x\}.
+            \end{align*}
+    \end{enumerate} 
+\end{definition}
+
+\subsection{Dense sets}
+
+\begin{definition}
+    A subset $D\subseteq X$ is said to be \emph{dense} if, for every $x\in X$
+    and every $r>0$, there exists a point $y\in D$ such that $d(x,y)<r$.
+\end{definition}
+
+\begin{proposition}[Notes 4.33]
+    A subset $D\subseteq X$ is dense iff it intersects every non-empty open 
+    subset of $X$. 
 \end{proposition}
 
 \end{document}
