--- a/2021_22/HALG/notes/notes.tex
+++ b/2021_22/HALG/notes/notes.tex
@@ -463,7 +463,7 @@
     the composition $g\circ f:U\to W$ is the matrix product of the representing matrices of 
     $f$ and $g$:
     \begin{align*}
-        \repr{c}{g\circ f}{A}=\repr{C}{g}{B}\circ\repr{B}{f}{A}
+        \repr{C}{g\circ f}{A}=\repr{C}{g}{B}\circ\repr{B}{f}{A}
     \end{align*} 
 \end{theorem}
 
