--- a/2021_22/HALG/notes/notes.tex
+++ b/2021_22/HALG/notes/notes.tex
@@ -256,7 +256,7 @@
         f(\lambda \vec v_1)  & = \lambda f(\vec v_1).
     \end{align*}
     A bijective linear mapping is called an \emph{isomorphism} of vector spaces.
-    A homorphism from one vector space to itself is called an \emph{endomorphism}.
+    A homomorphism from one vector space to itself is called an \emph{endomorphism}.
     An isomorphism of a vector space to itself is called an \emph{automorphism}.
 \end{definition}
 
@@ -525,5 +525,272 @@
 \begin{definition}
     The \emph{trace} $\tr(A)$ of a square matrix $A$ is defined to be the sum of its diagonal entries.
 \end{definition}
+
+\section{Rings and modules}
+
+\subsection{Rings}
+
+\begin{definition}
+    A \emph{ring} is a set with two operations $(R,+,\cdot)$ that satisfy: 
+    \begin{enumerate}
+        \item $(R,+)$ is an abelian group (associativity, identity, inverse and commutativity);
+        \item $(R,\cdot)$ is a monoid (associativity and identity);
+        \item For all $a,b,c\in R$ \begin{align*}
+            a\cdot (b+c) & = (a\cdot b) + (a\cdot c),\\
+            (a+b)\cdot c & = (a\cdot c) + (b\cdot c).
+        \end{align*}
+    \end{enumerate}
+    A ring in which multiplication is commutative is called a \emph{commutative ring}.
+\end{definition}
+
+\begin{definition}
+    A \emph{field} is a non-zero commutative ring $F$ in which every non-zero element 
+    $a\in F$ has a multiplicative inverse $\inv a\in F$.
+\end{definition}
+
+\begin{proposition}[Notes 3.1.11]
+    Let $m\in\N$. The commutative ring $\Z/m\Z$ is a field iff $m$ is prime.
+\end{proposition}
+
+\subsection{Properties of rings}
+
+\begin{lemma}[Notes 3.2.1]
+    Let $(R,+,\cdot)$ be a ring and let $a,b\in R$. Then 
+    \begin{enumerate}
+        \item $0a=0=a0$.
+        \item $(-a)b=-(ab)=a(-b)$.
+        \item $(-a)(-b) = ab$.
+    \end{enumerate} 
+\end{lemma}
+
+\begin{definition}
+    Let $m\in\Z$. The \emph{$m$-th multiple $ma$ of an element $a$} in an abelian 
+    group $R$ is 
+    \begin{align*}
+        ma = \underbrace{a + \cdots + a}_\text{$m$ terms} \hs \text{if } m >0,
+    \end{align*}
+    $0a=0$, and negative multiples are defined by $(-m)a=-(ma)$.
+\end{definition}
+
+\begin{lemma}[Notes 3.2.4]
+    Let $R$ be a ring, let $a,b\in R$ and let $m,n\in\Z$. Then:
+    \begin{enumerate}
+        \item $m(a+b)=ma+mb$;
+        \item $(m+n)a=ma+na$;
+        \item $m(na)=(mn)a$;
+        \item $m(ab)=(ma)b=a(mb)$;
+        \item $(ma)(nb)=(mn)(ab)$.
+    \end{enumerate} 
+\end{lemma}
+
+\begin{definition}
+    Let $R$ be a ring. An element $a\in R$ is called a \emph{unit} if it has a 
+    multiplicative inverse in $R$.
+\end{definition}
+
+\begin{proposition}
+    Thet set $R^\times$ of units in a ring $R$ forms a group under multiplication.
+\end{proposition}
+
+\begin{definition}
+    In a ring $R$ a non-zero element $a$ is called a \emph{zero-divisor} if 
+    there exists a non-zero element $b$ such that either $ab=0$ or $ba=0$.
+\end{definition}
+
+\begin{definition}
+    An \emph{integral domain} is a non-zero commutative ring that has no zero-divisors.
+\end{definition}
+
+\begin{proposition}[Notes 3.2.15]
+    Let $R$ be an integral domain and let $a,b,c\in R$. If $ab=ac$ and $a\not=0$
+    then $b=c$.
+\end{proposition}
+
+\begin{proposition}[Notes 3.2.16]
+    Let $m\in\N$. Then $\Z/m\Z$ is an integral domain iff $m$ is prime. 
+\end{proposition}
+
+\begin{theorem}[Notes 3.2.17]
+    Every finite integral domain is a field.
+\end{theorem}
+
+\subsection{Polynomials}
+
+\begin{definition}
+    Let $R$ be a ring. A \emph{polynomial over $R$} is an expression of the form 
+    \begin{align*}
+        P=a_0+a_1+X+\cdots+a_mX^m
+    \end{align*} 
+    for some non-negative integer $m$ and elements $a_i\in R$ for $i=0,...,m$.
+    The set of all polynomials over $R$ is denoted by $R[X]$. In case $a_m$ 
+    is non-zero, the polynomial $P$ has \emph{degree} $m$, written $\deg P$,
+    and $a_m$ is its \emph{leading coefficient}. When the leading coefficient is 
+    $1$ the polynomial is called \emph{monic}.
+\end{definition}
+
+\begin{definition}
+    The set $R[X]$ is called the \emph{ring of polynomials with coefficients 
+    in $R$}. The zero and the identity of $R[X]$ are the zero and the identity of 
+    $R$, respectively.
+\end{definition}
+
+\begin{lemma}
+    \begin{enumerate}
+        \item If $R$ is a ring with no zero-divisors, then $R[X]$ has no zero-divisors 
+            and $\deg(PQ)=\deg P + \deg Q$ for non-zero $P,Q\in R[X]$.
+        \item If $R$ is an integral domain then so is $R[X]$.
+    \end{enumerate} 
+\end{lemma}
+
+\begin{theorem}[Notes 3.3.4]
+    Let $R$ be an integral domain and let $P,Q\in R[X]$ with $Q$ monic. Then there exists 
+    a unique $A,B\in R[X]$ such that $P=AQ+B$ and $\deg B<\deg Q$ or $B=0$. 
+\end{theorem}
+
+\begin{definition}
+    Let $R$ be a commutative ring and $P\in R[X]$ a polynomial. Then the polynomial $P$
+    can be \emph{evaluated} at the element $\lambda\in R$ to produce $P(\lambda)$
+    by replacing the powers of $X$ in $P$ by the corresponding powers of $\lambda$. 
+    In this way we havea mapping 
+    \begin{align*}
+        R[X] \to \text{Maps}(R,R).
+    \end{align*}
+    An element $\lambda\in R$ is a \emph{root} of $P$ if $P(\lambda) = 0$.
+\end{definition}
+
+\begin{proposition}[Notes 3.3.9]
+    Let $R$ be a commutative ring, let $\lambda\in R$ and $P(X)\in R[X]$. Then $\lambda$
+    is a root of $P(X)$ iff $(X-\lambda)$ divides $P(X)$. 
+\end{proposition}
+
+\begin{theorem}[Notes 3.3.10]
+    Let $R$ be a field, or more generally an integral domain. Then a non-zero polynomial
+    $P\in R[X]\setminus\{0\}$ has at most $\deg P$ roots in $R$. 
+\end{theorem}
+
+\begin{definition}
+    A field $F$ is \emph{algebraically closed} if each non-constant polynomial $P\in F[X]\setminus F$
+    with coefficients in $F$ has a root in $F$.
+\end{definition}
+
+\begin{theorem}[Fundamental Theorem of Algebra]
+    The field of complex numbers, $\C$, is algebraically closed. 
+\end{theorem}
+
+\begin{theorem}[Notes 3.3.14]
+    If $F$ is an algebraically closed field, then every non-zero polynomial
+    $P\in F[X]\setminus\{0\}$ \emph{decomposes into linear factors}
+    \begin{align*}
+        P=c(X-\lambda_1)\cdots(X-\lambda_n)
+    \end{align*} 
+    with $n\geq 0$, $c\in F^\times$ and $\lambda_1,...,\lambda_n\in F$. This 
+    decomposition is unique up to reordering the factors.
+\end{theorem}
+
+\subsection{Homomorphisms, ideals and subrings}
+
+\begin{definition}
+    Let $R$ and $S$ be rings. A mapping $f:R\to S$ is a \emph{ring homomorphism} if 
+    the following hold for all $x,y\in R$:
+    \begin{align*}
+        f(x+y) & = f(x) + f(y), \\
+        f(xy)  & = f(x)f(y).
+    \end{align*}
+\end{definition}
+
+\begin{lemma}[Notes 3.4.5]
+    Let $R$ and $S$ be rings and $f:R\to S$ a ring homomorphism. Then for all $x,y\in R$ 
+    and $m\in\Z$:
+    \begin{enumerate}
+        \item $f(0_R)=0_S$;
+        \item $f(-x)=-f(x)$;
+        \item $f(x-y)=f(x)-f(y)$;
+        \item $f(mx)=mf(x)$,
+    \end{enumerate} 
+    where $mx$ denotes the $m$-th multiple of $x$.
+\end{lemma}
+
+\begin{definition}
+    A subset $I$ of a ring $R$ is an \emph{ideal}, written $I\trianglelefteq R$, if 
+    the following hold:
+    \begin{enumerate}
+        \item $I\not=\emptyset$;
+        \item $I$ is closed under subtraction;
+        \item for all $i\in I$ and $r\in R$ we have $ri,ir\in I$.
+    \end{enumerate}
+\end{definition}
+
+\begin{definition}
+    Let $R$ be a commutative ring and let $T\subset R$. Then the \emph{ideal of $R$
+    generated by $T$} is the set 
+    \begin{align*}
+        _R\lra{T} = \{r_1t_1+\cdots+r_mt_m : t_1,...,t_m\in T,r_1,...,r_m\in R\},
+    \end{align*}
+    together with the zero element in case $T=\emptyset$. If $T$ is finite we will 
+    abuse notation by writing $_R\lra{t_1,...,t_n}$.
+\end{definition}
+
+\begin{proposition}[Notes 3.4.14]
+    Let $R$ be a commutative ring and let $T\subseteq R$. Then $_R\lra{T}$ is the 
+    smallest ideal of $R$ that contains $T$. 
+\end{proposition}
+
+\begin{definition}
+    Let $R$ be a commutative ring. An ideal $I$ of $R$ is called \emph{principal} if 
+    $I=\lra{t}$ for some $t\in R$.
+\end{definition}
+
+\begin{definition}
+    Let $R$ and $S$ be rings with zero elements $0_R$ and $0_S$ respectively and 
+    let $f:R\to S$ be a ring homomorphism. Since $f$ is in particular a group homomorphism
+    from $(R,+)$ to $(S,+)$, the \emph{kernel} of $f$ already has a meaning 
+    \begin{align*}
+        \ker f = \{r\in R : f(r) = 0_S\}.
+    \end{align*}
+\end{definition}
+
+\begin{proposition}[Notes 3.4.18]
+    Let $f:R\to S$ be a ring homomorphism. Then $\ker f$ is an ideal of $R$.
+\end{proposition}
+
+\begin{lemma}[Notes 3.4.20]
+    $f$ is injective iff $\ker f = \{0\}$. 
+\end{lemma}
+
+\begin{lemma}[Notes 3.4.21]
+    The intersection of any collection of ideals of a ring $R$ is an ideal of $R$.
+\end{lemma}
+
+\begin{lemma}[Notes 3.4.22]
+    Let $I$ and $J$ be ideals of a ring $R$. Then 
+    \begin{align*}
+        I+J=\{a+b:a\in I, b\in J\}
+    \end{align*}
+    is an ideal of $R$.
+\end{lemma}
+
+\begin{definition}
+    Let $R$ be a ring. A subset $R'$ of $R$ is a subring of $R$ if $R'$ itself 
+    is a ring under the operations of addition and multiplication defined in $R$.
+\end{definition}
+
+\begin{proposition}[Notes 3.4.26]
+    Let $R'$ be a subset of a ring $R$. Then $R'$ is a subring iff 
+    \begin{enumerate}
+        \item $R'$ has a multiplicative identity, and 
+        \item $R'$ is closed under subtraction, and 
+        \item $R'$ is closed under multiplication.
+    \end{enumerate} 
+\end{proposition}
+
+\begin{proposition}[Notes 3.4.28]
+    Let $R$ and $S$ be rings and $f:R\to S$ a ring homomorphism.
+    \begin{enumerate}
+        \item If $R'$ is a subring of $R$ then $f(R')$ is a subring of $S$. In particular
+            $\im f$ is a subring of $S$.
+        \item Assume that $f(1_R)=1_S$. Then if $x$ is a unit in $R$, $f(x)$ is a unit 
+            in $S$ and $\inv{(f(x))} = f(\inv x)$.
+    \end{enumerate} 
+\end{proposition}
 
 \end{document}
