--- a/2021_22/MS/notes/notes.tex
+++ b/2021_22/MS/notes/notes.tex
@@ -400,7 +400,7 @@ Let $(X,d)$ be a metric space.
 
 \subsection{Interior of a set}
 
-\subsection{Exterior and bondary of a set}
+\subsection{Exterior and boundary of a set}
 
 \subsection{Closure of a set}
 
