--- a/2021_22/INT/notes/notes.tex
+++ b/2021_22/INT/notes/notes.tex
@@ -297,15 +297,92 @@
     \end{align*} 
 \end{theorem}
 
-\begin{theorem}
+\begin{theorem}[Lecture 6, Theorem 1]
     If $m,n$ are coprime then $\phi(m\cdot n)=\phi(m)\cdot\phi(n)$.
 \end{theorem}
 
-\begin{theorem}
+\begin{theorem}[Lecture 6, Theorem 2]
     Let $m>1$. Suppose that $p_1,...,p_k$ are all distinct primes that divide $m$. Then 
     \begin{align*}
         \phi(m) = m\prod_{i=1}^k \left(1-\frac{1}{p_i}\right).
     \end{align*}
+\end{theorem}
+
+\begin{theorem}[Lecture 7, Theorem 1]
+    Let $n\in\N$. Then 
+    \begin{align*}
+        \sum_{d|n}\phi(d) = n.
+    \end{align*}
+\end{theorem}
+
+\section{Primitive roots}
+
+\begin{definition}
+    Let $p$ be prime. We say that $i\in\Z$ is a \emph{primitive root modulo $p$}
+    iff all elements $i^0,...,i^{p-1}$ are pairwise distinct modulo $p$. I.e.
+    $i^m\not\equiv 1\mod p$ for $0<m<p-1$.
+\end{definition}
+
+\begin{definition}
+    Let $p$ be prime. Then the ring $\Z_p$ is a field and denoted by $\F_p$.
+    The ring of polynomials with coefficients in $\F_p$ is denoted by $\F_p[x]$.
+\end{definition}
+
+\begin{theorem}[Lecture 7, Theorem 2]
+    A non-zero polynomial $f\in\F_p[x]$ of degree $n$ has at most $n$ roots $x$ 
+    in $\F_p$.
+\end{theorem}
+
+\begin{theorem}[Lecture 7, Theorem 3]
+    Let $p>0$ be a prime number then there exists $k\in\N$ which is a
+    primitive root modulo $p$. 
+\end{theorem}
+
+\begin{definition}
+    Let $G$ be a group. An element $g\in G$ generates $G$ if
+    \begin{align*}
+        G = \{g^k : k \in \N\}.
+    \end{align*}
+    If such a $g$ exists, we say $G$ is cyclic and write $G=\lra{g}$.
+\end{definition}
+
+\begin{definition}
+    Let $G$ be a group and $g\in G$. Then the order of $g$ is the smallest positive 
+    integer $n$ such that $g^n = 1$.
+\end{definition}
+
+\begin{corollary}[Lecture 8, Corollary 1]
+    Let $G$ be a finite cyclig group. Then $g\in G$ is a generator iff the order of 
+    $g$ equals $\abs{G}$, the cardinality of $G$.
+\end{corollary}
+
+\begin{lemma}
+    Let $G$ be a group and $g\in G$. If for integers $m,n$ we have $g^m=g^n=1$
+    then $g^{\gcd(m,n)}=1$.
+\end{lemma}
+
+\begin{theorem}[Lagrange; Lecture 8, Theorem 1]
+    Let $G$ be a finite cyclic group of cardinality $N$. If $g\in G$ then 
+    the order of $g$ divides $N$.
+\end{theorem}
+
+\begin{theorem}[Lecture 8, Theorem 2]
+    Let $G=\lra{g}$ and let $\alpha\in\Z$. Then $G=\lra{g^\alpha}$ iff
+    $\gcd(\alpha,\abs{G})=1$.
+\end{theorem}
+
+\begin{corollary}[Lecture 8, Corollary 2]
+    Let $G$ a finite cyclic group. Then $G$ has $\phi(\abs G)$ generators. 
+\end{corollary}
+
+\begin{definition}
+    The group of units in $\Z_p$ is denoted as $\Z_p^*$.
+\end{definition}
+
+\begin{theorem}[Lecture 8, Theorem 3]
+    Let $p$ prime and $i\in\Z$. Then $i$ is a primitive root modulo $p$ iff
+    $\Z_p^*=\lra{\overline i}$ where $\overline i$ denotes the coset of $i$ in
+    $\Z_p$. 
 \end{theorem}
 
 \end{document}
