HALG: Fix notation

--- a/2021_22/HALG/notes/notes.tex
+++ b/2021_22/HALG/notes/notes.tex
@@ -293,7 +293,7 @@
     Let $V,W$ be vector spaces over $F$ and let $B\subset V$ be a basis. Then
     restriction of a mapping gives a bijection
     \begin{align*}
-        \hom_F(V,W) & \to \text{Maps}(B,W) \\
+        \Hom_F(V,W) & \to \text{Maps}(B,W) \\
         f           & \mapsto \eval{f}{B}
     \end{align*}
 \end{lemma}
