--- a/2021_22/HALG/notes/notes.tex
+++ b/2021_22/HALG/notes/notes.tex
@@ -14,7 +14,7 @@
 \subsection{Solutions of simultaneous linear equations}
 
 \begin{definition}
-    Let $F$ be a field. A \emph{system of linear equations} with $n$ equations and
+    Let $F$ be a field. A \emph{finitely generated}h{system of linear equations} with $n$ equations and
     $m$ unknowns are equations
     \begin{align*}
         a_{11}x_1 + a_{12}x_2 + \cdots + a_{1m}x_m & = b_1 \\
@@ -792,5 +792,184 @@
             in $S$ and $\inv{(f(x))} = f(\inv x)$.
     \end{enumerate} 
 \end{proposition}
+
+\subsection{Equivalence relations}
+
+\begin{definition}
+    A \emph{relation $R$} on a set $X$ is a subset $R\subseteq X\times X$. In this context we 
+    may write $xRy$ instead of $(x,y)\in R$. Then $R$ is an \emph{equivalence equation on $X$}
+    if it is reflexive, symmetric and transitive.
+\end{definition}
+\begin{definition}
+    Let $\sim$ be an equivalence relation on a set $X$. For $x\in X$ the set $\eqc{x}:=\{z\in X:z\sim x\}$
+    is called the \emph{equivalence class of $x$}. A subset $E\subseteq X$ is called an equivalence 
+    class for $\sim$ if there is an $x\in X$ such that $E=E(x)$. A subset $Z\subseteq X$ containing 
+    precisely one element from each equivalence class is called a \emph{system of representatives}
+    for the equivalence relation.
+\end{definition}
+
+\begin{definition}
+    Given an equivalence relation $\sim$ on the set $X$ the \emph{set of equivalence classes},
+    which is a subset of the power set $\mathcal{P}(X)$ by 
+    \begin{align*}
+        (X/\sim) := \{\eqc x : x \in X\}.
+    \end{align*}
+    There is a canoncial surjective mapping $\eqc{-}:X\to (X/\sim),x\mapsto\eqc x$. 
+\end{definition}
+
+\begin{definition}
+    A map $g:(X/\sim)\to Z$ is \emph{well-defined} if there exists a mapping $f:X\to Z$
+    such that $f$ has the property $x\sim y\Leftrightarrow f(x)=f(y)$ and $f=g\circ\eqc-$.
+\end{definition}
+
+\subsection{Factor rings}
+
+\begin{definition}
+    Let $I$ be an ideal in a ring $R$. The set 
+    \begin{align*}
+        x + I := \{x + i : i\in I\}\subset R
+    \end{align*}
+    is a \emph{coset of $I$ in $R$}.
+\end{definition}
+
+\begin{definition}
+    Let $I$ be an ideal in a ring $R$ and $\sim$ the equivalence relation defined by 
+    $x\sim y\Leftrightarrow x-y\in I$. Then $R/I$, the \emph{factor ring of $R$ by $I$},
+    is the set $(R/\sim)$.
+\end{definition}
+
+\begin{theorem}[Notes 3.6.4]
+    Let $I$ be an ideal in a ring $R$. Define $+':R/I\times R/I\to R/I$ by 
+    \begin{align*}
+        (x+I)+'(y+I) = (x+y) + I
+    \end{align*}
+    and $\times' : R/I\times R/I\to R/I$ by 
+    \begin{align*}
+        (x+I)\times' (y+I) = xy + I
+    \end{align*}
+    for all $x,y\in R$. Then $(R/I,+',\times')$ is itself a ring.
+\end{theorem}
+
+\begin{theorem}[Notes 3.6.7]
+    Let $I$ be an ideal in a ring $R$.
+    \begin{enumerate}
+        \item The mapping $\eqc -$ is a surjective ring homomorphism with kernel $I$.
+        \item If $f:R\to S$ is a ring homomorphism so that $I\subseteq\ker f$, then there 
+            is a unique ring homomorphism $\bar f:R/I\to S$ such that $f=\bar f\circ\eqc -$.
+    \end{enumerate} 
+\end{theorem}
+
+\begin{theorem}[First Isormorphism Theorem for Rings; Notes 3.6.9]
+    Let $R$ and $S$ be rings. Then every ring homomorphism $f:R\to S$ induces a ring isomorphism
+    \begin{align*}
+        \bar f:R/\ker f \tilde\to \im f.
+    \end{align*} 
+\end{theorem}
+
+\subsection{Modules}
+
+\begin{definition}
+    A \emph{(left) module $M$ over a ring $R$} or \emph{an $R$-module} is a pair consisting of an
+    abelian group $M=(M,+_M)$ and a mapping 
+    \begin{align*}
+        R\times M &\to M\\
+        (r,a) &\mapsto ra
+    \end{align*}
+    such that for all $r,s\in R$ and $a,b\in M$ the following identities hold:
+    \begin{align*}
+        r(a +_M b) &= (ra) +_M (rb),\\
+        (r+_Rs)a &= (ra) +_M (sa),\\
+        r(sa) &= (rs)a,\\
+        1_Ra &= a.
+    \end{align*}
+\end{definition}
+
+\begin{lemma}[Notes 3.7.8]
+     Let $M$ be an $R$-module, $r\in R$ and $a\in M$. 
+     \begin{enumerate}
+         \item $0_Ra=0_M$.
+         \item $r0_M=0_M$.
+         \item $(-r)a=r(-a)=-(ra)$.
+     \end{enumerate}
+\end{lemma}
+
+\begin{definition}
+    Let $M,N$ be $R$-modules. A mapping $f:M\to N$ is an \emph{$R$-homomorphism} if the following 
+    hold for all $a,b\in M$ and $r\in R$:
+    \begin{align*}
+        f(a+b) &= f(a) + f(b)\\
+        f(ra) &= rf(a)
+    \end{align*}
+    The usual definitions of kernel, image and isomorphism apply.
+\end{definition}
+
+\begin{definition}
+    A non-empty subset $M'$ of an $R$-module $M$ is a \emph{submodule} if $M'$ is an 
+    $R$-module with respect to the operations of $M$ restricted to $M'$.
+\end{definition}
+
+\begin{lemma}[Notes 3.7.21]
+    Let $f:M\to N$ be an $R$-homomorphism. Then $\ker f$ is a submodule of $M$ and $\im f$
+    is a submodule of $N$.
+\end{lemma}
+
+\begin{lemma}[Notes 3.7.22]
+    Let $R$ be a ring, let $M$ and $N$ be $R$-modules and let $f:M\to N$ be an $R$-homomorphism.
+    Then $f$ is injective iff $\ker f =\{0_M\}$. 
+\end{lemma}
+
+\begin{definition}
+    Let $M$ be an $R$-module and let $T\subseteq M$. Then the \emph{submodule of $M$ generated by $T$}
+    is the set 
+    \begin{align*}
+        _R\lra T = \{r_1t_1+\cdots+r_mt_m:t_1,...,t_m\in T,r_1,...,r_m\in R\},
+    \end{align*}
+    together with the zero element in the case $T=\emptyset$. The module $M$ is \emph{finitely generated}
+    if it is generated by a finite set. It is called \emph{cyclic} if it is generated by a singleton.
+\end{definition}
+
+\begin{lemma}[Notes 3.7.28-30]
+    Let $M$ an $R$-module. 
+    \begin{itemize}
+        \item Let $T\subseteq M$. Then $_R\lra T$ is the smallest submodule of $M$ that contains $T$.
+        \item The intersection of any collection of submodules of $M$ is a submodule of $M$.
+        \item Let $M_1$ and $M_2$ be submodules of $M$. Then $M_1+M_2$ is a submodule of $M$.
+    \end{itemize}
+\end{lemma}
+
+\begin{definition}
+    Let $M$ an $R$-module and $N$ a submodule of $M$. For each $a\in M$ the \emph{coset of $a$ with
+    respect to $N$ in $M$} is 
+    \begin{align*}
+        a+N=\{a+b:b\in N\}.
+    \end{align*} 
+    Let 
+    The \emph{factor of $M$ by $N$}, denoted $M/N$, is the set of all cosets of $N$ in $M$.
+\end{definition}
+
+\begin{theorem}[Notes 3.7.31]
+    Let $M$ an $R$-module and $N$ a submodule of $M$. Define $+',\times'$ as follows:
+    \begin{align*}
+        (a+N)+'(b+N) &= (a+b)+N\\
+        r(a+N) &= ra + N 
+    \end{align*}
+    for all $a,b\in M,r\in R$. Then $(M/N,+',\times')$ is itself an $R$-module.
+\end{theorem}
+
+\begin{theorem}[Notes 3.7.32]
+    Let $L,M$ be $R$-modules and $N$ a submodule of $M$. Then
+    \begin{enumerate}
+        \item The mapping $\eqc - : M\to M/N$ is a surjective $R$-homomorphism with kernel $N$.
+        \item If $f:M\to L$ is a $R$-homomorphism so that $N\subseteq\ker f$, then there 
+            is a unique ring homomorphism $\bar f:M/N\to L$ such that $f=\bar f\circ\eqc -$.
+    \end{enumerate} 
+\end{theorem}
+
+\begin{theorem}[First Isormorphism Theorem for Modules; Notes 3.6.9]
+    Let $M$ and $N$ be $R$-modules. Then every $R$-homomorphism $f:M\to N$ induces an $R$-isomorphism
+    \begin{align*}
+        \bar f:M/\ker f \tilde\to \im f.
+    \end{align*} 
+\end{theorem}
 
 \end{document}
