PRJ: Last proposal changes

--- a/2022_23/PRJ/proposal/proposal.tex
+++ b/2022_23/PRJ/proposal/proposal.tex
@@ -9,7 +9,7 @@
 
 Kock formalised synthetic measure theory (SMT) using commutative monads. \cite{kock2011commutative}
 SMT is not a theory for the standard measure-theoretic formailsation of probability theory since it 
-postulates a function space.
+postulates cartesian closure.
 
 My goal for this project is to try and construct non-standard and categorical models for SMT. 
 Since category theory has not been covered in any of my courses, a significant part of the project 
